--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
 
   web:
     build: .
-    command: bash -c "python Popularity_corner/manage.py makemigrations && python Popularity_corner/manage.py migrate && python Popularity_corner/manage.py runserver 0.0.0.0:8000"
+    command: bash -c "python app/manage.py makemigrations && python app/manage.py migrate && python app/manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/code
     ports:
