--- a/airflow/last_week_scrapping/scrapy.cfg
+++ b/airflow/last_week_scrapping/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = box_office.settings
+default = last_week_scrapping.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = box_office
+project = last_week_scrapping
