--- a/airflow/docker-compose.yml
+++ b/airflow/docker-compose.yml
@@ -79,6 +79,8 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
     - ${AIRFLOW_PROJ_DIR:-.}/requirements.txt:/tmp/requirements.txt
     - ${AIRFLOW_PROJ_DIR:-.}/incoming_movies_spider:/opt/airflow/incoming_movies_spider
+    - ${AIRFLOW_PROJ_DIR:-.}/last_week_scrapping:/opt/airflow/last_week_scrapping
+  
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
