feat: modify some templates

--- a/.gitignore
+++ b/.gitignore
@@ -239,6 +239,7 @@ pip-selfcheck.json
 dockerfile
 Dockerfile
 docker-compose.yml
+azure-install.sh
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,python,venv
 
